mediafusion/ingressroute-jackett.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mediafusion-jackett.${dns_domain}
  namespace: mediafusion
spec:
  routes:
    - match: Host(`mediafusion-jackett.${dns_domain}`)
      kind: Rule
      services:
        - name: jackett
          kind: Service
          port: 9117
      middlewares:
      - name: mhdzumair-traefik-forward-auth
        namespace: aa-mhdzumair
